ags (2.1.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added ags_osc_client_test.c

ags (2.1.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing include of signal.h in ags_audio_application_context.c
	* fixed ags_thread_add_start_queue() and ags_thread_add_start_queue_all() to use correct mutex
	* fixed ags_functional_audio_test.c removed wrong code starting threads twice

ags (2.1.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_osc_server_add_default_controller()
	* improved AgsOscServer ::start() and ::stop()
	* fixed timeout of ags_osc_front_controller_delegate_thread()
	* fixed ags_play_channel_run_master_remap_dependencies() to check if AgsRecallID present
	* added ags_osc_status_controller_test.c
	* added ags_osc_front_controller_test.c
	* added ags_osc_server_test.c

ags (2.1.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMidiin, AgsJackMidiin and AgsCoreMidiing unitialized pointer
	* added ags_osc_config_controller_test.c
	* added ags_osc_info_controller_test.c

ags (2.1.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored AgsOscRenewController allowing you to use ranges and wildcards
	* refactored AgsOscNodeController allowing you to use ranges and wildcards
	* refactored AgsOscMeterController allowing you to use ranges and wildcards
	* fixed OSC controllers missing path matching recall
	* fixed ags_osc_buffer_util.c to do shift operator using guint64
	* fixed ags_osc_buffer_util_get_rgba() to access using correct index
	* fixed ags_osc_buffer_util_get_midi() to access using correct index
	* fixed ags_osc_buffer_util_get_packet() to read packet size
	* added ags_osc_buffer_util_test.c
	* added ags_osc_renew_controller_test.c
	* added ags_osc_node_controller_test.c
	* added ags_osc_meter_controller_test.c
	* added ags_osc_action_controller_test.c

ags (2.1.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]