@@ -2,6 +2,7 @@ ags (2.1.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* added ags_osc_client_test.c
+	* added ags_osc_connection_test.c
 
 ags (2.1.9)
 
